# ML_TELCO_CHURN

./: .gitignore  README.md  pyproject.toml
docs/: MLCanvas.excalidraw
docs/plans/: 2026-03-24-uv-setup-plan.md
docs/specs/: 2026-03-24-uv-config-design.md
notebooks/: 01_eda_feature_engineering.ipynb  02_baselines.ipynb  03_mlp_pytorch.ipynb  mlflow.db
notebooks/data/processed/: churn_processed.csv
notebooks/mlruns/1/8eae15b7a1e94bc4863a5507a7479942/artifacts/metrics/: mlp_training_history.csv
notebooks/mlruns/1/models/m-170d06380380456c99337f8fa3289609/artifacts/: MLmodel
notebooks/mlruns/1/models/m-6e4473b2a9af44be92d41f55b696357c/artifacts/: MLmodel
notebooks/mlruns/1/models/m-6e4473b2a9af44be92d41f55b696357c/artifacts/data/: model.pth
notebooks/mlruns/1/models/m-79660b00af3a43db8464213ad84fc188/artifacts/: MLmodel  model.pkl
notebooks/mlruns/1/models/m-b2ce1ddbd4024d648841ef5c5fba38b6/artifacts/: MLmodel
notebooks/mlruns/1/models/m-bc04de7b4b294ddc9187e2c8e085d3b0/artifacts/: MLmodel
notebooks/mlruns/1/models/m-bde9e8995f8248cf9fb73fc1512fcfe0/artifacts/: MLmodel  python_env.yaml
notebooks/mlruns/1/models/m-c5911faba66e4e73a47a5583a2ca10e1/artifacts/: MLmodel  model.pkl
notebooks/mlruns/1/models/m-de00ec222ccf406cafcacadf8cdcf54a/artifacts/: MLmodel  conda.yaml  requirements.txt
notebooks/mlruns/1/models/m-de00ec222ccf406cafcacadf8cdcf54a/artifacts/data/: model.pth
notebooks/mlruns/2/models/m-ca39aa5399f6462c8e374c7ffd27f909/artifacts/: MLmodel  conda.yaml  model.pkl
