[project]
name = "ml-telco-churn"
version = "0.1.0"
description = "Tech Challenge Fase 01 - ML Engineering (FIAP) - Grupo 21"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_telco_churn"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pandera>=0.30.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
eda = [
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "pip>=26.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
